force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__AssessmentIndicatorResult__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentIndicatorResult__c</fullName>
    <label>Assessment Indicator Result</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentIndicatorResult</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>