force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__FieldResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FieldResponseDateTime__c</fullName>
    <label>Field Response Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FieldResponseDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>