force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__FieldResponseDecimalNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__FieldResponseDecimalNumber__c</fullName>
    <label>Field Response Decimal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FieldResponseDecimalNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>