force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__FieldResponseIntegerNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__FieldResponseIntegerNumber__c</fullName>
    <label>Field Response Integer</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FieldResponseIntegerNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>