force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__FieldResponsePercentage__c.field-meta.xml
<CustomField>
    <fullName>ssot__FieldResponsePercentage__c</fullName>
    <label>Field Response Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FieldResponsePercentage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>