force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__FieldResponseText__c.field-meta.xml
<CustomField>
    <fullName>ssot__FieldResponseText__c</fullName>
    <label>Field Response Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FieldResponseText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>