force-app/main/default/objects/ssot__InspectionAssessmentIndicator__dlm/fields/ssot__rel_1739512777510_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512777510_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InspectionAssessmentIndicator_Assess_rel</label>
    <referenceTo>ssot__AssessmentIndicatorDefinition__dlm</referenceTo>
    <relationshipLabel>InspectionAssessmentIndicator_Assess_rel</relationshipLabel>
    <relationshipName>rel_1739512777510_end</relationshipName>
    <type>Lookup</type>
</CustomField>